chore: facility details
