# frontend/swagger.json
@@ -16,6 +16,7 @@
       "name": "Authentication",
       "description": "Operations related to authentication"
     },
+    { "name": "Zone Management", "description": "Operations related to zones" },
     {
       "name": "Category Management",
       "description": "Operations related to categories"
@@ -38,6 +39,40 @@
     }
   ],
   "paths": {
+    "/api/zones/{id}": {
+      "put": {
+        "tags": ["Zone Management"],
+        "summary": "Update a zone",
+        "description": "Update a zone by its ID.",
+        "operationId": "updateShop",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "format": "int64" }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/ZoneRequestDTO" }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": { "$ref": "#/components/schemas/BaseResponseZoneDTO" }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/warehouses/{warehouseId}": {
       "put": {
         "tags": ["Warehouse Management"],
@@ -137,7 +172,7 @@
         "tags": ["Shop Management"],
         "summary": "Update a shop",
         "description": "Update a shop by its ID.",
-        "operationId": "updateShop",
+        "operationId": "updateShop_1",
         "parameters": [
           {
             "name": "id",
@@ -464,6 +499,50 @@
         }
       }
     },
+    "/api/zones": {
+      "get": {
+        "tags": ["Zone Management"],
+        "summary": "Get all zones",
+        "description": "Fetch a list of all registered zones.",
+        "operationId": "getAllZonesOfUser",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/BaseResponseListZoneDTO"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": ["Zone Management"],
+        "summary": "Create a zone",
+        "description": "Create a zone by owner or staff of the shop.",
+        "operationId": "createZone",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/ZoneRequestDTO" }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": { "$ref": "#/components/schemas/BaseResponseZoneDTO" }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/warehouses/{shopId}": {
       "post": {
         "tags": ["Warehouse Management"],
@@ -558,32 +637,6 @@
             "content": {
               "*/*": {
                 "schema": { "$ref": "#/components/schemas/BaseResponseUserDTO" }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/shops": {
-      "post": {
-        "tags": ["Shop Management"],
-        "summary": "Create a shop",
-        "description": "Create a shop by owner or admin.",
-        "operationId": "createShop",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/CreateShopDTO" }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": { "$ref": "#/components/schemas/BaseResponseShopDTO" }
               }
             }
           }
@@ -736,72 +789,6 @@
             "content": {
               "*/*": {
                 "schema": { "$ref": "#/components/schemas/BaseResponseOrder" }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/inventories/": {
-      "get": {
-        "tags": ["Inventories Management"],
-        "summary": "Get the inventories",
-        "description": "Fetch a list of the registered inventories.",
-        "operationId": "getInventory",
-        "parameters": [
-          {
-            "name": "page",
-            "in": "query",
-            "required": false,
-            "schema": { "type": "integer", "format": "int32", "default": 0 }
-          },
-          {
-            "name": "pageSize",
-            "in": "query",
-            "required": false,
-            "schema": { "type": "integer", "format": "int32", "default": 10 }
-          },
-          {
-            "name": "search",
-            "in": "query",
-            "required": false,
-            "schema": { "type": "string", "default": "" }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/BaseResponsePaginateResponseInventoryResponseDTO"
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": ["Inventories Management"],
-        "summary": "Create a inventory",
-        "description": "Create a inventory with the provided data.",
-        "operationId": "createInventory",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/InventoryCreateDTO" }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/BaseResponseInventoryResponseDTO"
-                }
               }
             }
           }
@@ -973,6 +960,34 @@
               "*/*": {
                 "schema": {
                   "$ref": "#/components/schemas/BaseResponsePaginateResponseWarehouseDTO"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/warehouses/{id}": {
+      "get": {
+        "tags": ["Warehouse Management"],
+        "summary": "Get details warehouse of a shop",
+        "description": "Get details warehouse of a shop",
+        "operationId": "getWarehouseDetail",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "format": "int64" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/BaseResponseWarehouseDTO"
                 }
               }
             }
@@ -1232,6 +1247,46 @@
         }
       }
     },
+    "/api/inventories/": {
+      "get": {
+        "tags": ["Inventories Management"],
+        "summary": "Get the inventories",
+        "description": "Fetch a list of the registered inventories.",
+        "operationId": "getInventory",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": { "type": "integer", "format": "int32", "default": 0 }
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "required": false,
+            "schema": { "type": "integer", "format": "int32", "default": 10 }
+          },
+          {
+            "name": "search",
+            "in": "query",
+            "required": false,
+            "schema": { "type": "string", "default": "" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/BaseResponsePaginateResponseInventoryResponseDTO"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/categories/all": {
       "get": {
         "tags": ["Category Management"],
@@ -1301,11 +1356,50 @@
   },
   "components": {
     "schemas": {
+      "ZoneRequestDTO": {
+        "type": "object",
+        "properties": {
+          "name": { "type": "string" },
+          "warehouseId": { "type": "integer", "format": "int64" }
+        },
+        "required": ["warehouseId"]
+      },
+      "BaseResponseZoneDTO": {
+        "type": "object",
+        "properties": {
+          "data": { "$ref": "#/components/schemas/ZoneDTO" },
+          "message": { "type": "string" },
+          "errorCode": {
+            "type": "string",
+            "enum": [
+              "AUTH_MISSING",
+              "TOKEN_EXPIRED",
+              "TOKEN_INVALID",
+              "ACCESS_DENIED",
+              "BAD_REQUEST",
+              "INTERNAL_SERVER_ERROR"
+            ]
+          }
+        }
+      },
+      "ZoneDTO": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int64" },
+          "name": { "type": "string" },
+          "createdAt": { "type": "string", "format": "date-time" },
+          "updatedAt": { "type": "string", "format": "date-time" },
+          "warehouseId": { "type": "integer", "format": "int64" },
+          "warehouseName": { "type": "string" },
+          "status": { "type": "string", "enum": ["ACTIVE", "INACTIVE"] }
+        }
+      },
       "WarehouseUpdateDTO": {
         "type": "object",
         "properties": {
           "name": { "type": "string" },
           "address": { "type": "string" },
+          "description": { "type": "string" },
           "status": { "type": "string" }
         }
       },
@@ -1332,6 +1426,7 @@
         "properties": {
           "id": { "type": "integer", "format": "int64" },
           "name": { "type": "string" },
+          "description": { "type": "string" },
           "address": { "type": "string" },
           "createdAt": { "type": "string", "format": "date-time" },
           "updatedAt": { "type": "string", "format": "date-time" },
@@ -1664,7 +1759,7 @@
         "type": "object",
         "properties": {
           "productId": { "type": "integer", "format": "int64" },
-          "warehouseId": { "type": "integer", "format": "int64" },
+          "zoneId": { "type": "integer", "format": "int64" },
           "quantity": { "type": "integer", "format": "int32" }
         }
       },
@@ -1691,10 +1786,9 @@
         "properties": {
           "id": { "type": "integer", "format": "int64" },
           "productId": { "type": "integer", "format": "int64" },
-          "warehouseId": { "type": "integer", "format": "int64" },
-          "quantity": { "type": "integer", "format": "int32" },
+          "zoneId": { "type": "integer", "format": "int64" },
+          "zoneName": { "type": "string" },
           "productName": { "type": "string" },
-          "warehouseName": { "type": "string" },
           "createdBy": { "$ref": "#/components/schemas/UserDTO" },
           "createdAt": { "type": "string" },
           "updatedAt": { "type": "string" },
@@ -1733,6 +1827,7 @@
         "properties": {
           "name": { "type": "string" },
           "address": { "type": "string" },
+          "description": { "type": "string" },
           "shopId": { "type": "integer", "format": "int64" }
         },
         "required": ["shopId"]
@@ -1750,13 +1845,6 @@
           "name": { "type": "string" }
         },
         "required": ["name", "password", "phoneNumber", "username"]
-      },
-      "CreateShopDTO": {
-        "type": "object",
-        "properties": {
-          "name": { "type": "string" },
-          "address": { "type": "string" }
-        }
       },
       "PartnerCreateDTO": {
         "type": "object",
@@ -1783,15 +1871,6 @@
           "shipping": { "type": "boolean" },
           "debt": { "type": "boolean" }
         }
-      },
-      "InventoryCreateDTO": {
-        "type": "object",
-        "properties": {
-          "productId": { "type": "integer", "format": "int64" },
-          "warehouseId": { "type": "integer", "format": "int64" },
-          "quantity": { "type": "integer", "format": "int32" }
-        },
-        "required": ["productId", "quantity", "warehouseId"]
       },
       "CreateCategoryDTO": {
         "type": "object",
@@ -1892,6 +1971,27 @@
         },
         "required": ["email", "reCaptchaToken"]
       },
+      "BaseResponseListZoneDTO": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/ZoneDTO" }
+          },
+          "message": { "type": "string" },
+          "errorCode": {
+            "type": "string",
+            "enum": [
+              "AUTH_MISSING",
+              "TOKEN_EXPIRED",
+              "TOKEN_INVALID",
+              "ACCESS_DENIED",
+              "BAD_REQUEST",
+              "INTERNAL_SERVER_ERROR"
+            ]
+          }
+        }
+      },
       "BaseResponsePaginateResponseWarehouseDTO": {
         "type": "object",
         "properties": {
@@ -1929,6 +2029,7 @@
         "type": "object",
         "properties": {
           "name": { "type": "string" },
+          "description": { "type": "string" },
           "address": { "type": "string" },
           "shopId": { "type": "integer", "format": "int64" },
           "id": { "type": "integer", "format": "int64" },
@@ -1937,6 +2038,24 @@
           "createdAt": { "type": "string", "format": "date-time" }
         },
         "required": ["status"]
+      },
+      "BaseResponseWarehouseDTO": {
+        "type": "object",
+        "properties": {
+          "data": { "$ref": "#/components/schemas/WarehouseDTO" },
+          "message": { "type": "string" },
+          "errorCode": {
+            "type": "string",
+            "enum": [
+              "AUTH_MISSING",
+              "TOKEN_EXPIRED",
+              "TOKEN_INVALID",
+              "ACCESS_DENIED",
+              "BAD_REQUEST",
+              "INTERNAL_SERVER_ERROR"
+            ]
+          }
+        }
       },
       "BaseResponseListWarehouseDTO": {
         "type": "object",
@@ -2275,8 +2394,6 @@
         "properties": {
           "totalElements": { "type": "integer", "format": "int64" },
           "totalPages": { "type": "integer", "format": "int32" },
-          "first": { "type": "boolean" },
-          "last": { "type": "boolean" },
           "size": { "type": "integer", "format": "int32" },
           "content": {
             "type": "array",
@@ -2284,6 +2401,8 @@
           },
           "number": { "type": "integer", "format": "int32" },
           "sort": { "$ref": "#/components/schemas/SortObject" },
+          "first": { "type": "boolean" },
+          "last": { "type": "boolean" },
           "numberOfElements": { "type": "integer", "format": "int32" },
           "pageable": { "$ref": "#/components/schemas/PageableObject" },
           "empty": { "type": "boolean" }
@@ -2294,9 +2413,9 @@
         "properties": {
           "offset": { "type": "integer", "format": "int64" },
           "sort": { "$ref": "#/components/schemas/SortObject" },
-          "pageNumber": { "type": "integer", "format": "int32" },
           "paged": { "type": "boolean" },
           "pageSize": { "type": "integer", "format": "int32" },
+          "pageNumber": { "type": "integer", "format": "int32" },
           "unpaged": { "type": "boolean" }
         }
       },
@@ -2334,12 +2453,22 @@
         "properties": {
           "id": { "type": "integer", "format": "int64" },
           "product": { "$ref": "#/components/schemas/Product" },
-          "warehouse": { "$ref": "#/components/schemas/Warehouse" },
-          "quantity": { "type": "integer", "format": "int32" },
+          "zone": { "$ref": "#/components/schemas/Zone" },
           "createdBy": { "$ref": "#/components/schemas/User" },
           "createdAt": { "type": "string", "format": "date-time" },
           "updatedAt": { "type": "string", "format": "date-time" }
         }
+      },
+      "Zone": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int64" },
+          "name": { "type": "string" },
+          "createdAt": { "type": "string", "format": "date-time" },
+          "updatedAt": { "type": "string", "format": "date-time" },
+          "status": { "type": "string", "enum": ["ACTIVE", "INACTIVE"] }
+        },
+        "required": ["status"]
       },
       "BaseResponsePaginateResponseInventoryResponseDTO": {
         "type": "object",
